--- a/404.html
+++ b/404.html
@@ -9,14 +9,14 @@
     <link rel="preload stylesheet" href="/assets/style.BivVYu9l.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.LzjrzmBV.js"></script>
+    <script type="module" src="/assets/app.CJL3l96f.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"action.md\":\"D2rWLIlk\",\"db.md\":\"BonFzZMl\",\"fun.md\":\"D2-VLHSg\",\"guide.md\":\"IGU1WETp\",\"home.md\":\"B4mXHk9M\",\"index.md\":\"BcpdMaWG\",\"module.md\":\"OG0VGxZ0\",\"route.md\":\"DgDaVESK\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"zh-CN\",\"dir\":\"ltr\",\"title\":\"NexoPHP\",\"description\":\"NexoPHP 是一个基于 PHP 8.x 版本的框架，它的目标是为 PHP 开发者提供一个简单、快速、安全的软件开发框架\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"首页\",\"link\":\"/\"},{\"text\":\"入门\",\"link\":\"/home\"},{\"text\":\"指南\",\"link\":\"/guide\"},{\"text\":\"数据库\",\"link\":\"/db\"},{\"text\":\"函数\",\"link\":\"/fun\"},{\"text\":\"Action\",\"link\":\"/action\"},{\"text\":\"模块\",\"link\":\"/module\"}],\"search\":{\"provider\":\"local\",\"options\":{\"locales\":{\"root\":{\"translations\":{\"button\":{\"buttonText\":\"搜索文档\",\"buttonAriaLabel\":\"搜索文档\"},\"modal\":{\"noResultsText\":\"无法找到相关结果\",\"resetButtonTitle\":\"清除查询条件\",\"footer\":{\"selectText\":\"选择\",\"navigateText\":\"切换\",\"closeText\":\"关闭\"}}}}}}}},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"action.md\":\"D2rWLIlk\",\"db.md\":\"BonFzZMl\",\"fun.md\":\"D2-VLHSg\",\"guide.md\":\"IGU1WETp\",\"home.md\":\"Duln3cju\",\"index.md\":\"BcpdMaWG\",\"module.md\":\"OG0VGxZ0\",\"route.md\":\"DgDaVESK\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"zh-CN\",\"dir\":\"ltr\",\"title\":\"NexoPHP\",\"description\":\"NexoPHP 是一个基于 PHP 8.x 版本的框架，它的目标是为 PHP 开发者提供一个简单、快速、安全的软件开发框架\",\"base\":\"/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"首页\",\"link\":\"/\"},{\"text\":\"入门\",\"link\":\"/home\"},{\"text\":\"指南\",\"link\":\"/guide\"},{\"text\":\"数据库\",\"link\":\"/db\"},{\"text\":\"函数\",\"link\":\"/fun\"},{\"text\":\"Action\",\"link\":\"/action\"},{\"text\":\"模块\",\"link\":\"/module\"}],\"search\":{\"provider\":\"local\",\"options\":{\"locales\":{\"root\":{\"translations\":{\"button\":{\"buttonText\":\"搜索文档\",\"buttonAriaLabel\":\"搜索文档\"},\"modal\":{\"noResultsText\":\"无法找到相关结果\",\"resetButtonTitle\":\"清除查询条件\",\"footer\":{\"selectText\":\"选择\",\"navigateText\":\"切换\",\"closeText\":\"关闭\"}}}}}}}},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false,\"additionalConfig\":{}}");</script>
     
   </body>
 </html>
